--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "test": "vitest"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.22.3",
-    "prop-types": "^15.8.1"
+    "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.1.0",
+    "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -31,9 +31,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "json-server": "^1.0.0-alpha.22",
     "jsdom": "^24.0.0",
+    "json-server": "^1.0.0-alpha.22",
     "vite": "^6.3.1",
-    "vitest": "^1.3.1"
+    "vitest": "^3.1.1"
   }
 }
